--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@date-io/date-fns": "^2.10.6",
+    "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
+    "material-ui": "^0.20.2",
     "popper.js": "^1.16.1",
     "qs": "^6.9.4",
     "react": "^17.0.1",
