--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.16.1",
     "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
+    "material-ui-dropzone": "^3.5.0",
     "popper.js": "^1.16.1",
     "qs": "^6.9.4",
     "react": "^17.0.1",
